--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
+    "@nestjs/mapped-types": "^1.0.1",
     "@nestjs/platform-express": "^7.6.15",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
